<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Basic test sample</string>
    <string name="password_label">Your password:</string>
    <string name="email_label">Your Email address:</string>
    <string name="settings_title">My Login page</string>
    <string name="login">Login</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter your Email</string>
    <string name="email_error">Invalid email</string>
    <string name="password_error">Invalid password</string>

    <string name="welcome_title">Welcome!</string>
    <string name="title_activity_welcome">Welcome</string>
</resources>
